update: update swagger course management
